# search-api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  blogs.json  blogs1.json  search.toml
.github/workflows/: rust.yml
data/: .managed.json  meta.json
src/: config.rs  insert.rs  ipc.rs  main.rs  migrate.rs  query_schema.rs  search.rs  tokenizer.rs  tool.rs
src/config/: read.rs
src/insert/: insert.rs
src/ipc/: callee.rs  decode.rs  encode.rs
src/migrate/: fetch.rs  init.rs  scheduled.rs  unescape.rs
src/query/: query_schema.rs
src/search/: query.rs
src/tokenizer/: segmentation.rs  tokenstream.rs
