[package]
name = "search_api"
version = "0.1.1"
authors = ["WincerChan <WincerChan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = { path = "/Users/loerfy/.cargo/registry/src/github.com-1ecc6299db9ec823/tantivy-0.16.1/" }
# tantivy = "0.16.1"
toml = "0.5"
ureq = "2.3.1"
atom_syndication = "0.11"
chrono = "*"
regex = "1.5"