[package]
name = "search_api"
version = "0.1.7"
authors = ["WincerChan <WincerChan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# tantivy = { path = "/Users/loerfy/.cargo/registry/src/github.com-1ecc6299db9ec823/tantivy-0.16.1/" }
# fix experimental param6 error
zstd-sys = "=2.0.9"
tantivy = "0.21"
toml = "0.8.12"
regex = "1.10.4"
native-tls = "0.2.11"
quick-xml = "0.31.0"
time = "0.3.34"
